--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/semantic-v2.2.14.css">
+    <link rel="stylesheet" type="text/css" href="css/prophet.css">
 </head>
 
 <div id="root"></div>
